# mcp-server-yandex-market-seller

./: CLAUDE.md  README.md  development.md  maintainer.md  pyproject.toml  server.json
.github/workflows/: test.yml
src/mcp_server_yandex_market_seller/: __init__.py  __main__.py  actions.py  cli.py  models.py  server.py  ym_api.py
tests/: conftest.py  test_cli.py  test_full.py  test_mcp_campaigns.py  test_mcp_misc.py  test_mcp_offers.py  test_mcp_orders.py  test_mcp_prices.py  test_mcp_promos.py  test_mcp_returns.py  test_mcp_shipments.py  test_offers.py  test_orders.py
