[project]
name = "mcp-server-yandex-market-seller"
version = "0.4.2"
description = "MCP server for Yandex Market Partner API — orders, offers, prices, stocks, analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28",
]

[project.scripts]
mcp-server-yandex-market-seller = "mcp_server_yandex_market_seller:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_yandex_market_seller"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.21", "anyio>=4.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
